Local commit - made changes to DTO, soft delete and repository functionalities